# trooth

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
include/: Makefile.am  Makefile.in
include/trooth/: BigInt.h  bigint.h  bigint_internal.h  environment.h  environment_internal.h  fraction.h  number.h  number_internal.h  polynomial.h  rational.h  rational_internal.h  trooth.h  util_internal.h
includes/: BigInt.h  Environment.h  Fraction.h  util.h
internal/: Environment_Internal.h
src/: BigInt.c  Environment.c  Fraction.c  Makefile  Makefile.am  Makefile.in  bigint.c  environment.c  fraction.c  number.c  polynomial.c  rational.c
tests/: BigInt_Test.c  Makefile  Makefile.am  Makefile.in  check_bigint.c  check_bigint.h  check_fraction.c  check_fraction.h  check_number.c  check_rational.c  check_trooth.c
