TESTS = check_bigint check_fraction
check_PROGRAMS = check_bigint check_fraction
check_bigint_SOURCES = check_trooth.c check_bigint.c
check_bigint_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/includes/
check_bigint_LDADD = $(top_builddir)/src/libtrooth.a @CHECK_LIBS@
check_fraction_SOURCES = check_trooth.c check_fraction.c
check_fraction_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/includes/
check_fraction_LDADD = $(top_builddir)/src/libtrooth.a @CHECK_LIBS@

