TESTS = check_bigint check_rational check_number
check_PROGRAMS = check_bigint check_rational check_number
check_bigint_SOURCES = check_trooth.c check_bigint.c
check_bigint_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/include/
check_bigint_LDADD = $(top_builddir)/src/libtrooth.a @CHECK_LIBS@
check_rational_SOURCES = check_trooth.c check_rational.c
check_rational_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/include/
check_rational_LDADD = $(top_builddir)/src/libtrooth.a @CHECK_LIBS@
check_number_SOURCES = check_trooth.c check_number.c
check_number_CFLAGS = @CHECK_CFLAGS@ -I$(top_builddir)/include/
check_number_LDADD = $(top_builddir)/src/libtrooth.a @CHECK_LIBS@
